@@ -13,6 +13,8 @@ PHP                                                                        NEWS
   empty). (Felipe)
 - Fixed bug #52436 (Compile error if systems do not have stdint.h)
   (Sriram Natarajan)
+- Fixed bug #52302 (mysqli_fetch_all does not work with MYSQLI_USE_RESULT).
+  (Andrey).
 - Fixed bug #51610 (Using oci_connect causes PHP to take a long time to
   exit). Requires Oracle bug fix 9891199 for this patch to have an
   effect. (Oracle Corp.)
